[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art_Assets/Background/Sky/black_background.png" type="Texture" id=1]
[ext_resource path="res://Art_Assets/Background/Sky/StarField.png" type="Texture" id=2]
[ext_resource path="res://Art_Assets/Celestial_Bodies/Main_Menu_Earth.png" type="Texture" id=3]
[ext_resource path="res://Game_Assets/Main_Menu/MenuContainer.gd" type="Script" id=4]
[ext_resource path="res://Game_Assets/Fonts/slkscre.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art_Assets/UI/RightArrow.png" type="Texture" id=6]
[ext_resource path="res://Game_Assets/Fonts/slikscreen.tres" type="DynamicFont" id=7]
[ext_resource path="res://Game_Assets/Main_Menu/MainMenuCamera.gd" type="Script" id=8]
[ext_resource path="res://Game_Assets/Main_Menu/CanvasModulate.gd" type="Script" id=9]
[ext_resource path="res://Game_Assets/Main_Menu/BackgroundMusic.gd" type="Script" id=10]
[ext_resource path="res://Game_Assets/Music/daniel robert lahey - gravity's kiss - 04 osiris.ogg" type="AudioStream" id=11]
[ext_resource path="res://Game_Assets/Music/effects/beep.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 5 )

[node name="Main_Menu" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1, 2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -240 )
__meta__ = {
"_edit_lock_": true
}

[node name="StarField" type="Sprite" parent="."]
position = Vector2( 0, -290 )
scale = Vector2( 1, 1.83766 )
texture = ExtResource( 2 )
centered = false

[node name="Earth_Close" type="Sprite" parent="."]
position = Vector2( 83.3984, 239.236 )
z_index = 2
texture = ExtResource( 3 )
centered = false

[node name="Menu" type="MarginContainer" parent="."]
margin_left = 100.735
margin_top = 116.397
margin_right = 625.735
margin_bottom = 166.397
__meta__ = {
"_edit_group_": true
}

[node name="MenuContainer" type="VBoxContainer" parent="Menu"]
editor/display_folded = true
margin_right = 525.0
margin_bottom = 226.0
script = ExtResource( 4 )

[node name="GameName" type="Label" parent="Menu/MenuContainer"]
margin_right = 525.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Evacuation Earth"

[node name="Play" type="HBoxContainer" parent="Menu/MenuContainer"]
margin_top = 46.0
margin_right = 525.0
margin_bottom = 88.0

[node name="SpriteContainer" type="MarginContainer" parent="Menu/MenuContainer/Play"]
margin_bottom = 42.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="PlayArrow" type="Sprite" parent="Menu/MenuContainer/Play/SpriteContainer"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false

[node name="LabelContainer" type="MarginContainer" parent="Menu/MenuContainer/Play"]
margin_left = 264.0
margin_right = 404.0
margin_bottom = 42.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PlayLabel" type="Label" parent="Menu/MenuContainer/Play/LabelContainer"]
margin_right = 140.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 7 )
text = "Play"

[node name="MusicVol" type="HBoxContainer" parent="Menu/MenuContainer"]
margin_top = 92.0
margin_right = 525.0
margin_bottom = 134.0

[node name="SpriteContainer" type="MarginContainer" parent="Menu/MenuContainer/MusicVol"]
margin_right = 226.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicArrow" type="Sprite" parent="Menu/MenuContainer/MusicVol/SpriteContainer"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false

[node name="LabelContainer" type="MarginContainer" parent="Menu/MenuContainer/MusicVol"]
margin_left = 230.0
margin_right = 525.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicVol" type="Label" parent="Menu/MenuContainer/MusicVol/LabelContainer"]
margin_right = 295.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Music : 10"

[node name="SoundFXVol" type="HBoxContainer" parent="Menu/MenuContainer"]
margin_top = 138.0
margin_right = 525.0
margin_bottom = 180.0

[node name="SpriteContainer" type="MarginContainer" parent="Menu/MenuContainer/SoundFXVol"]
margin_right = 116.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FXArrow" type="Sprite" parent="Menu/MenuContainer/SoundFXVol/SpriteContainer"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false

[node name="LabelContainer" type="MarginContainer" parent="Menu/MenuContainer/SoundFXVol"]
margin_left = 120.0
margin_right = 525.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FXVol" type="Label" parent="Menu/MenuContainer/SoundFXVol/LabelContainer"]
margin_right = 405.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 7 )
text = "Sound FX : 10"

[node name="Quit" type="HBoxContainer" parent="Menu/MenuContainer"]
margin_top = 184.0
margin_right = 525.0
margin_bottom = 226.0

[node name="SpriteContainer" type="MarginContainer" parent="Menu/MenuContainer/Quit"]
margin_right = 260.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitArrow" type="Sprite" parent="Menu/MenuContainer/Quit/SpriteContainer"]
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
centered = false

[node name="LabelContainer" type="MarginContainer" parent="Menu/MenuContainer/Quit"]
margin_left = 264.0
margin_right = 384.0
margin_bottom = 42.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="QuitLabel" type="Label" parent="Menu/MenuContainer/Quit/LabelContainer"]
margin_right = 120.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 7 )
text = "Quit"

[node name="MainMenuCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 8 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource( 9 )

[node name="BackgroundMusic" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BackgroundMusic"]
stream = ExtResource( 11 )
autoplay = true

[node name="Tween" type="Tween" parent="BackgroundMusic"]

[node name="BeepSound" type="Node" parent="."]

[node name="BeepPlayer" type="AudioStreamPlayer" parent="BeepSound"]
stream = ExtResource( 12 )
[connection signal="doneWithFade" from="CanvasModulate" to="Menu/MenuContainer" method="_on_CanvasModulate_doneWithFade"]
[connection signal="tween_completed" from="BackgroundMusic/Tween" to="BackgroundMusic" method="_on_Tween_tween_completed"]
